--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    bla boal boa bla bla bla bla bla bla bla bla vla bla
 <img src="https://d2jx2rerrg6sh3.cloudfront.net/image-handler/picture/2018/2/banana.jpg" alt="mooie gele banaan op fruitschaal">
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem pariatur asperiores molestiae praesentium facere exercitationem, perspiciatis quod doloremque sequi omnis quibusdam provident iure quae repellat tenetur, cum iste vel.</p>
 
